--- a/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
@@ -6,11 +6,11 @@
 [id="uninstalling-{prod-id-short}-by-using-{prod-cli}_{context}"]
 = Uninstalling {prod-short} by using `{prod-cli}`
 
-To uninstall an instance of {prod} that was installed using the `{prod-cli}` tool:
+To uninstall an instance of {prod} that was installed using the `{prod-cli}` tool on {platforms-name}:
 
 .Prerequisites
 
-* The `{prod-cli}` tool was used to install the {prod-short} instance on {orch-name}.
+* The `{prod-cli}` tool was used to install the {prod-short} instance on {platforms-name}.
 * The `{prod-cli}` and `{orch-cli}` tools are available.
 
 .Procedure
