--- a/modules/administration-guide/pages/uninstalling-che-on-openshift.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-on-openshift.adoc
@@ -6,6 +6,8 @@
 [id="uninstalling-{prod-id-short}-on-openshift_{context}"]
 = Uninstalling {prod-short} on OpenShift
 
+IMPORTANT: To uninstall an instance of {prod} that was installed using the `{prod-cli}` tool on the {ocp} or {osd}, go to xref:uninstalling-che-by-using-chectl.adoc[].
+
 To uninstall an {prod} instance that was installed using the OperatorHub on the {ocp} or {osd}:
 
 . Uninstall the {devworkspace} Operator and related Custom Resources.
