--- a/modules/administration-guide/partials/proc_uninstalling-che-by-using-the-openshift-cli.adoc
+++ b/modules/administration-guide/partials/proc_uninstalling-che-by-using-the-openshift-cli.adoc
@@ -40,3 +40,6 @@ To uninstall the {prod-short} instance and the {prod} Operator by using the Open
 
 +
 `$ oc delete csv __<csv_name>__`
+
++
+This uninstalls both the {prod-short} instance and the {prod} Operator.
