--- a/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
@@ -24,3 +24,11 @@ To uninstall an instance of {prod} that was installed using the `{prod-cli}` too
 
 +
 `$ {prod-cli} server:delete -n __<{orch-namespace}>__`
+
++
+[NOTE]
+====
+If uninstalling {prod-short} from a Minikube cluster, optionally remove the `dex` namespace.
+
+`$ {orch-cli} delete namespaces dex`
+====
