--- a/modules/administration-guide/partials/proc_using-chectl-to-install-che-on-codeready-containers.adoc
+++ b/modules/administration-guide/partials/proc_using-chectl-to-install-che-on-codeready-containers.adoc
@@ -5,51 +5,39 @@
 [id="using-{prod-cli}-to-install-{prod-id-short}-on-codeready-containers_{context}"]
 = Using {prod-cli} to install {prod-short} on CodeReady Containers 
 
-This section describes how to install {prod-short} on CodeReady Containers (CRC) using `{prod-cli}`.
+This section describes how to install {prod-short} on CodeReady Containers using `{prod-cli}`.
 
 .Prerequisites
 
 * The `{prod-cli}` management tool is available. See xref:using-the-chectl-management-tool.adoc[].
 * An installation of CodeReady Containers. See link:https://console.redhat.com/openshift/create/local[Installing CodeReady Containers].
-* The path to the user's CRC pull secret is known.
+* The path to the user's CodeReady Containers pull secret is known as __<pull-secret-file>__.
 
 .Procedure
 
-. Initiate the CRC platform:
-
-.. Configure your host machine for CodeReady Containers:
-+
-----
-$ crc setup
-----
-
-.. Remove any previous cluster:
+. Remove any previous cluster:
 +
 ----
 $ crc delete
 ----
 
-.. Initiate the `oc` command line interface within CRC: 
+. Configure your host machine for CodeReady Containers:
++
+----
+$ crc setup
+----
+
+. Start the CodeReady Containers virtual machine with at least 12 GB of RAM and specify the path to your pull secret, and take note of the password for the user `kubeadmin`, displayed at the end of the CodeReady Containers initiation:
++
+[subs="+quotes"]
+----
+$ crc start --memory 12288 --pull-secret-file __<pull-secret-file>__
+----
+
+. Enable access to the `oc` command line interface embedded in CodeReady Containers:
 +
 ----
 $ eval $(crc oc-env)
-----
-
-.. Start the CodeReady Containers virtual machine with at least 12 GB of RAM and specify the path to your pull secret:
-+
-[subs="+quotes"]
-----
-$ crc start --memory 12288 --pull-secret-file __<download-path>__pull-secret.txt
-----
-
-.. Take note of the password for the user `kubeadmin`, displayed at the end of the CRC initiation.
-
-. Log into the OpenShift cluster using the `kubeadmin` username, the corresponding `__<kubeadmin-password>__` password, and the CRC URL pointer displayed at the end of the CRC initiation phase:
-+
-[subs="+quotes"]
-----
-$ oc login --username="kubeadmin" --password="__<kubeadmin-password>__" https://api.crc.testing:6443
-
 ----
 
 . Install the {prod-short} instance using {prod-cli}:
@@ -58,15 +46,6 @@ $ oc login --username="kubeadmin" --password="__<kubeadmin-password>__" https://
 ----
 $ {prod-cli} server:deploy --platform crc
 ----
-
-. Use the Users Dashboard CRC testing URL and sign in as:
-+
-----
-Login: developer
-Password: developer
-----
-
-. Enter the user's credentials and start using {prod-short}.
 
 
 .Additional resources
