--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -22,15 +22,16 @@ The workspace engine and authentication system used until version {prod-last-ver
 +
 [source,bash,subs="+attributes"]
 ----
-INSTALLATION_NAMESPACE={prod-namespace} #<1>
-PRODUCT_DEPLOYMENT_NAME={prod-deployment}
-PRODUCT_OPERATOR_NAME={prod-operator}
-PRODUCT_ID={prod-id}
-CHE_CLUSTER_CR_NAME={prod-checluster}
-IDENTITY_PROVIDER_DEPLOYMENT_NAME={identity-provider-id}
-OLM_STABLE_CHANNEL={prod-stable-channel}
-OLM_CATALOG_SOURCE={prod-stable-channel-catalog-source}
-OLM_PACKAGE={prod-stable-channel-package}
+export INSTALLATION_NAMESPACE={prod-namespace} #<1>
+export PRODUCT_DEPLOYMENT_NAME={prod-deployment}
+export PRODUCT_SUBSCRIPTION_NAME={prod-subscription}
+export PRODUCT_OPERATOR_NAME={prod-operator}
+export PRODUCT_ID={prod-id}
+export CHE_CLUSTER_CR_NAME={prod-checluster}
+export IDENTITY_PROVIDER_DEPLOYMENT_NAME={identity-provider-id}
+export OLM_STABLE_CHANNEL={prod-stable-channel}
+export OLM_CATALOG_SOURCE={prod-stable-channel-catalog-source}
+export OLM_PACKAGE={prod-stable-channel-package}
 ----
 <1> Adapt to the {orch-namespace} where {prod-short} is installed.
 
