--- a/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
@@ -28,7 +28,7 @@ To uninstall an instance of {prod} that was installed using the `{prod-cli}` too
 +
 [NOTE]
 ====
-If uninstalling {prod-short} from a Minikube cluster, optionally remove the `dex` namespace.
+If uninstalling {prod-short} from a Minikube cluster: remove the `dex` and Che namespaces.
 
 `$ {orch-cli} delete namespaces dex`
 ====
