--- a/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
@@ -30,5 +30,5 @@ To uninstall an instance of {prod} that was installed using the `{prod-cli}` too
 ====
 If uninstalling {prod-short} from a Minikube cluster: remove the `dex` and Che namespaces.
 
-`$ {orch-cli} delete namespaces dex`
+`$ {orch-cli} delete namespaces dex __<{orch-namespace}>__`
 ====
