--- a/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
@@ -26,9 +26,4 @@ To uninstall an instance of {prod} that was installed using the `{prod-cli}` too
 `$ {prod-cli} server:delete -n __<{orch-namespace}>__`
 
 +
-[NOTE]
-====
-If uninstalling {prod-short} from a Minikube cluster: remove the `dex` and Che namespaces.
-
-`$ {orch-cli} delete namespaces dex __<{orch-namespace}>__`
-====
+include::example$snip_{project-context}-note-uninstalling-in-minicube-cluster.adoc[]
