--- a/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
@@ -1,23 +1,43 @@
-:_content-type: CONCEPT
-:navtitle: Configuring workspace target {orch-namespace}
+:_content-type: PROCEDURE
+:navtitle: Configuring {orch-namespace} name
 :keywords: administration guide, configuring, namespace
-:page-aliases: installation-guide:configuring-namespace-strategies, configuring-namespace-strategies
+:page-aliases: 
 
-[id="configuring-workspace-target-namespace_{context}"]
-= Configuring workspace target {orch-namespace}
+[id="configuring-user-{orch-namespace}-name-for-automatic-provisioning_{context}"]
+= Configuring user {orch-namespace} name for automatic provisioning
 
-For each user, {prod-short} isolates the workspaces in a {orch-namespace}.
-You can configure the {orch-namespace} name template.
+You can configure the {orch-namespace} name template that {prod-short} is using to create the required {orch-namespace} when starting a workspace.
 
-{prod-short} server checks usernames and IDs for compatibility with {orch-name} objects naming convention before creating a {orch-namespace} from a template:
+A valid {orch-namespace} name template follows this convention:
 
 * The `<username>` or `<userid>` placeholder is mandatory.
-* Incompatible usernames or IDs are reduced to the nearest valid name by replacing groups of unsuitable symbols with the `-` symbol. 
-* The `<userid>` placeholder is evaluated into a 14 character long string.
-* When using `<userid>`, the addition of a random 6-symbol suffix prevents IDs from collisions. The result is stored in preferences for reuse.
-* {kubernetes} limits the length of a {orch-namespace} name to 63 characters (this includes the evaluated placeholders). Additionally, the names (after placeholder evaluation) must be valid DNS names.
+
+* {prod-short} reduces usernames or IDs incompatible with {orch-name} objects naming convention to the nearest valid name by replacing groups of unsuitable symbols with the `-` symbol. 
+
+* {prod-short} evaluates the `<userid>` placeholder into a 14 character long string, and adds a random 6 character long suffix to prevents IDs from collisions. The result is stored in the user preferences for reuse.
+
+* {kubernetes} limits the length of a {orch-namespace} name to 63 characters. 
+
 * OpenShift limits the length further to 49 characters.
 
+* The resulting name is a valid DNS name.
+
+
+.Procedure
+
+* Set the `server.workspaceNamespaceDefault` property in CheCluster Custom Resource:
++
+[source,yaml,subs="+quotes,+attributes"]
+----
+kind: CheCluster
+apiVersion: org.eclipse.che/v1
+# ...
+spec:
+  server:
+    workspaceNamespaceDefault: __<workspace_namespace_template_>__
+# ...
+----
++
 .User workspaces {orch-namespace} name template examples
 ====
 [%header,cols="1,1"]  
@@ -35,22 +55,6 @@ You can configure the {orch-namespace} name template.
 |`cgezegvsb2nhba-aka-user1-namespace-6m2w2b`
 |=== 
 ====
-
-
-.Procedure
-
-* Set the `server.workspaceNamespaceDefault` property in CheCluster Custom Resource:
-+
-[source,yaml,subs="+quotes,+attributes"]
-----
-kind: CheCluster
-apiVersion: org.eclipse.che/v1
-# ...
-spec:
-  server:
-    workspaceNamespaceDefault: __<workspaceNamespaceDefault_value>__
-# ...
-----
 
 .Additional resources
 
