--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -10,12 +10,12 @@
 
 :context: uninstalling-{prod-id-short}
 
-This section describes uninstallation procedures for {prod}. The uninstallation process leads to a complete removal of {prod-short}-related user data. The method previously used to install the {prod-short} instance determines the uninstallation method.
+WARNING: Uninstalling {prod-short} removes all {prod-short}-related user data!
 
-* For {prod-short} installed using OperatorHub, for the OpenShift Web Console method see xref:uninstalling-che-after-operatorhub-installation-using-openshift-web-console.adoc[].
+How the {prod-short} instance was installed determines the uninstallation procedure:
 
-* For {prod-short} installed using OperatorHub, for the CLI method see xref:uninstalling-che-after-operatorhub-installation-using-openshift-cli.adoc[].
+* If the {prod-short} instance was installed using OperatorHub, then see xref:uninstalling-che-on-openshift.adoc[].
 
-* For {prod-short} installed using {prod-cli}, see xref:uninstalling-che-after-chectl-installation.adoc[]
+* If the {prod-short} instance was installed using `{prod-cli}`, then see xref:uninstalling-che-by-using-chectl.adoc[].
 
 :context: {parent-context-of-uninstalling-che}
