review: Mounting resources (#10)
* review

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -9,11 +9,12 @@
 ** xref:benefits-of-pull-requests-review-in-che.adoc[]
 * xref:selecting-an-ide.adoc[]
 * xref:customizing-workspaces-components.adoc[]
-* xref:mounting-volumes-secrets-and-configmaps.adoc[]
-** xref:mounting-volumes.adoc[] 
-** xref:mounting-configmaps-and-secrets.adoc[]
-** xref:git-credential-store.adoc[]
-* xref:image-pull-secrets.adoc[]
+* xref:volumes-secrets-and-configmaps.adoc[]
+** xref:mounting-persistent-volumes.adoc[] 
+** xref:mounting-configmaps.adoc[]
+** xref:mounting-secrets.adoc[]
+*** xref:git-credential-store.adoc[]
+*** xref:image-pull-secrets.adoc[]
 * xref:integrating-with-kubernetes.adoc[]
 ** xref:automatic-token-injection.adoc[]
 ** xref:navigating-che-from-openshift-developer-perspective.adoc[]
