Address PR feedback
Signed-off-by: dakwon <dakwon@redhat.com>

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -14,7 +14,7 @@
 ** xref:mounting-configmaps.adoc[]
 ** xref:mounting-secrets.adoc[]
 *** xref:git-credential-store.adoc[]
-*** xref:image-pull-secrets.adoc[]
+** xref:image-pull-secrets.adoc[]
 * xref:integrating-with-kubernetes.adoc[]
 ** xref:automatic-token-injection.adoc[]
 ** xref:navigating-che-from-openshift-developer-perspective.adoc[]
