--- a/modules/end-user-guide/pages/image-pull-secrets.adoc
+++ b/modules/end-user-guide/pages/image-pull-secrets.adoc
@@ -5,7 +5,7 @@
 [id="image-pull-secrets_{context}"]
 = Creating image pull Secrets
 
-You can create an image pull Secret containing credentials to allow {devworkspace} Pods to access private container registries.
+You can create an image pull Secret containing credentials to allow {devworkspace} Pods to access container registries requiring authentication.
 
 An existing Docker credentials file such as `.dockercfg` or `$HOME/.docker/config.json` can be used to create the image pull Secret. Alternatively, the Secret can be created by running `{orch-cli} create secret docker-registry`.
 
@@ -59,7 +59,7 @@ metadata:
     controller.devfile.io/devworkspace_pullsecret: 'true'
     controller.devfile.io/watch-secret: 'true'
 data:
-  .dockerconfigjson: __<Base64_content_of_.dockerconfigjson>__
+  .dockerconfigjson: __<Base64_content_of_config.json>__
 type: kubernetes.io/dockerconfigjson
 ----
 
