--- a/modules/end-user-guide/pages/mounting-configmaps.adoc
+++ b/modules/end-user-guide/pages/mounting-configmaps.adoc
@@ -5,7 +5,7 @@
 [id="mounting-configmaps_{context}"]
 = Mounting ConfigMaps
 
-You can automatically mount {orch-name} ConfigMaps to all {devworkspace} containers, creating permanent mount points for components such as configuration files (for example, the `settings.xml` file for Maven configuration).
+You can automatically mount {orch-name} ConfigMaps to all workspace containers, creating permanent mount points for components for configuration files.
 
 ConfigMaps are {orch-name} objects that store non-confidential data such as configuration values for an application.
 
@@ -13,11 +13,12 @@ ConfigMaps are {orch-name} objects that store non-confidential data such as conf
 
 * A running instance of {prod-short}.
 * You have GUI or CLI access to the {orch-name} cluster of your organization's {prod-short} instance.
+* You have created a new ConfigMap or determined an existing one in your user {orch-namespace} to mount to all workspaces containers.
 * For CLI users: The `{orch-cli}` command line tool is installed in the operating system you are using.
 
 .Procedure
 
-. Determine an existing ConfigMap or Secret in your user {orch-namespace} to mount to all {devworkspace} containers.
+. Determine an existing ConfigMap in your user {orch-namespace} to mount to all workspace containers.
 
 . Set the required labels for mounting.
 +
@@ -69,5 +70,5 @@ data:
   __<env_var_2>__: __<value_2>__
 ----
 
-When a {devworkspace} starts, environment variables `__<env_var_1>__` and `__<env_var_2>__` will be available in the {devworkspace} containers.
+When a workspace starts, environment variables `__<env_var_1>__` and `__<env_var_2>__` will be available in the workspace containers.
 ====
