--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -5,19 +5,20 @@
 [id="mounting-secrets_{context}"]
 = Mounting Secrets
 
-You can automatically mount {orch-name} Secrets to all {devworkspace} containers, creating permanent mount points for components such as SSH key pairs or AWS authorization tokens.
+You can automatically mount {orch-name} Secrets to all workspace containers, creating permanent mount points for components such as SSH key pairs or AWS authorization tokens.
 
-Secrets are {orch-name} objects that store confidential data such as user names, passwords, authentication tokens, and configurations in an encrypted form.
+Secrets are {orch-name} objects that store confidential data such as usernames, passwords, authentication tokens, and configurations in an encrypted form.
 
 .Prerequisites
 
 * A running instance of {prod-short}.
 * You have GUI or CLI access to the {orch-name} cluster of your organization's {prod-short} instance.
+* You have created a new Secret or determined an existing one in your user {orch-namespace} to mount to all workspaces containers.
 * For CLI users: The `{orch-cli}` command line tool is installed in the operating system you are using.
 
 .Procedure
 
-. Determine an existing ConfigMap or Secret in your user {orch-namespace} to mount to all {devworkspace} containers.
+. Determine an existing ConfigMap or Secret in your user {orch-namespace} to mount to all workspace containers.
 
 . Set the required labels for mounting.
 +
