--- a/modules/end-user-guide/pages/volumes-secrets-and-configmaps.adoc
+++ b/modules/end-user-guide/pages/volumes-secrets-and-configmaps.adoc
@@ -1,12 +1,25 @@
-:navtitle: Volumes, ConfigMaps, and Secrets
+:navtitle: Injecting User Credentials and Configurations
 :keywords: user-guide, configuring, user, configmaps, secrets, volumes, mounting, mount
 :page-aliases: 
 
-[id="mounting-volumes-secrets-and-configmaps_{context}"]
-= Volumes, ConfigMaps, and Secrets
+[id="injecting-user-credentials-and-configurations_{context}"]
+= Injecting User Credentials and Configurations
 
-You can mount your xref:mounting-volumes.adoc[Persistent Volume Claims (PVC)], xref:mounting-configmaps.adoc[ConfigMaps], and xref:mounting-secrets.adoc[Secrets], such as a xref:git-credential-store.adoc[Git gredential store], into your {devworkspace} containers.
+== Mounting resources
+You can inject your user credentials, configurations, and persistent volumes into your workspace containers.
 
-The mounting process uses the standard {kubernetes} mounting mechanism. Resources are mounted when starting a new {devworkspace} or restarting an existing one.
+This can be done by mounting xref:mounting-persistent-volumes.adoc[Persistent Volume Claims (PVC)], xref:mounting-configmaps.adoc[ConfigMaps], and xref:mounting-secrets.adoc[Secrets] into your workspace containers.
 
-Mounting your existing resources to the {devworkspace} containers requires additional labels and annotations applied to your existing resources.
+Permanent mount points can be created for components such as:
+
+* Maven configuration, such as the `settings.xml` file 
+* SSH key pairs
+* AWS authorization tokens
+* Configuration files
+* Persistent storage
+* Git credentials store files
+
+The mounting process uses the standard {kubernetes} mounting mechanism, and requires additional labels and annotations applied to your existing resources. Resources are mounted when starting a new workspace or restarting an existing one.
+
+== Image pull Secrets
+You can configure image pull Secrets to be applied to workspace Pods to access container registries requiring authentication. See xref:image-pull-secrets.adoc[Creating image pull Secrets].
