--- a/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
+++ b/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
@@ -24,7 +24,7 @@ metadata:
   annotations:
     che.eclipse.org/username: __<username>__
 ----
-<1> Use a {orch-namespace} name at your convenance
+<1> Use a {orch-namespace} name of your choosing.
 
 .Additional resources
 
