--- a/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
+++ b/modules/administration-guide/pages/provisioning-namespaces-in-advance.adoc
@@ -10,7 +10,7 @@ You can provision workpaces {orch-namespace}s in advance, rather than relying on
 
 .Procedure
 
-* Create the __<{orch-namespace}_name>__ {orch-namespace} for __<username>__ user, with following labels and annotations.
+* Create the __<{orch-namespace}_name>__ {orch-namespace} for __<username>__ user with the following labels and annotations:
 +
 [source,yaml,subs="+quotes,+attributes"]
 ----
