--- a/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
@@ -12,7 +12,7 @@ A valid {orch-namespace} name template follows this convention:
 
 * The `<username>` or `<userid>` placeholder is mandatory.
 
-* {prod-short} reduces usernames or IDs incompatible with {orch-name} objects naming convention to the nearest valid name by replacing groups of unsuitable symbols with the `-` symbol. 
+* Usernames and IDs cannot contain invalid characters. If the formatting of a username or ID is incompatible with the naming conventions for {orch-name} objects, {prod-short} changes the username or ID to a valid name by replacing incompatible characters with the `-` symbol. 
 
 * {prod-short} evaluates the `<userid>` placeholder into a 14 character long string, and adds a random six character long suffix to prevent IDs from colliding. The result is stored in the user preferences for reuse.
 
