--- a/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
@@ -8,7 +8,7 @@
 
 You can configure the {orch-namespace} name template that {prod-short} is using to create the required {orch-namespace} when starting a workspace.
 
-A valid {orch-namespace} name template follows this convention:
+A valid {orch-namespace} name template follows these conventions:
 
 * The `<username>` or `<userid>` placeholder is mandatory.
 
