--- a/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
@@ -6,7 +6,7 @@
 [id="configuring-user-{orch-namespace}-name-for-automatic-provisioning_{context}"]
 = Configuring user {orch-namespace} name for automatic provisioning
 
-You can configure the {orch-namespace} name template that {prod-short} is using to create the required {orch-namespace} when starting a workspace.
+You can configure the {orch-namespace} name template that {prod-short} uses to create the required {orch-namespace} when starting a workspace.
 
 A valid {orch-namespace} name template follows these conventions:
 
