--- a/modules/administration-guide/pages/configuring-namespace-provisioning.adoc
+++ b/modules/administration-guide/pages/configuring-namespace-provisioning.adoc
@@ -6,7 +6,7 @@
 [id="configuring-user-{orch-namespace}-provisioning_{context}"]
 = Configuring user {orch-namespace} provisioning
 
-For each user, {prod-short} isolates the workspaces in a {orch-namespace}. 
+For each user, {prod-short} isolates workspaces in a {orch-namespace}. 
 {prod-short} identifies the user {orch-namespace} by the presence of labels and annotations.
 When starting a workspace, if the required {orch-namespace} doesn't exist, {prod-short} creates the {orch-namespace} using a template name. 
 
