--- a/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-workspace-target-namespace.adoc
@@ -3,7 +3,7 @@
 :keywords: administration guide, configuring, namespace
 :page-aliases: 
 
-[id="configuring-user-{orch-namespace}-name-for-automatic-provisioning_{context}"]
+[id="configuring-a-user-{orch-namespace}-name-for-automatic-provisioning_{context}"]
 = Configuring a user {orch-namespace} name for automatic provisioning
 
 You can configure the {orch-namespace} name template that {prod-short} uses to create the required {orch-namespace} when starting a workspace.
