--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -31,13 +31,15 @@
 *** xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
 *** xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
 *** xref:checluster-custom-resource-fields-reference.adoc[]
+** xref:configuring-namespace-provisioning.adoc[]
+*** xref:configuring-workspace-target-namespace.adoc[]
+*** xref:provisioning-namespaces-in-advance.adoc[]
 ** xref:configuring-server-components.adoc[]
 *** xref:mounting-a-secret-as-a-file-or-an-environment-variable-into-a-container.adoc[]
 *** xref:advanced-configuration-options-for-the-che-server-component.adoc[]
 ** xref:configuring-workspaces-globally.adoc[]
 *** xref:configuring-the-number-of-workspaces-that-a-user-can-create.adoc[]
 *** xref:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[]
-*** xref:configuring-namespace-strategies.adoc[]
 *** xref:configuring-workspaces-nodeselector.adoc[]
 ** xref:caching-images-for-faster-workspace-start.adoc[]
 *** xref:defining-the-list-of-images-to-pull.adoc[]
