--- a/modules/administration-guide/pages/configuring-workspaces-globally.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-globally.adoc
@@ -6,7 +6,10 @@
 [id="configuring-workspaces-globally_{context}"]
 = Configuring workspaces globally
 
+This section describes how an administrator can configure workspaces globally.
+
 * xref:configuring-the-number-of-workspaces-that-a-user-can-create.adoc[]
+
 * xref:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[]
-* xref:configuring-namespace-strategies.adoc[]
+
 * xref:configuring-workspaces-nodeselector.adoc[]
