fix: page-aliases

--- a/modules/administration-guide/pages/uninstalling-che-on-openshift.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-on-openshift.adoc
@@ -1,7 +1,7 @@
 :_content-type: ASSEMBLY
 :navtitle: Uninstalling {prod-short} on OpenShift
 :keywords: administration guide, uninstalling-che, uninstalling-che-after-operatorhub-installation
-:page-aliases: .:installation-guide:uninstalling-che-after-operatorhub-installation
+:page-aliases: installation-guide:uninstalling-che-after-operatorhub-installation
 
 [id="uninstalling-{prod-id-short}-on-openshift_{context}"]
 = Uninstalling {prod-short} on OpenShift
