--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -23,15 +23,19 @@ The workspace engine and authentication system used until version {prod-last-ver
 [source,bash,subs="+attributes"]
 ----
 export INSTALLATION_NAMESPACE={prod-namespace} #<1>
-export PRODUCT_DEPLOYMENT_NAME={prod-deployment}
-export PRODUCT_SUBSCRIPTION_NAME={prod-subscription}
-export PRODUCT_OPERATOR_NAME={prod-operator}
 export PRODUCT_ID={prod-id}
-export CHE_CLUSTER_CR_NAME={prod-checluster}
-export IDENTITY_PROVIDER_DEPLOYMENT_NAME={identity-provider-id}
-export OLM_STABLE_CHANNEL={prod-stable-channel}
-export OLM_CATALOG_SOURCE={prod-stable-channel-catalog-source}
-export OLM_PACKAGE={prod-stable-channel-package}
+export PRODUCT_DEPLOYMENT_NAME={prod-deployment}
+export PRODUCT_OPERATOR_NAME={prod-operator}
+export PRODUCT_CHE_CLUSTER_CR_NAME={prod-checluster}
+export PRODUCT_OLM_STABLE_CHANNEL={prod-stable-channel}
+export PRODUCT_OLM_CATALOG_SOURCE={prod-stable-channel-catalog-source}
+export PRODUCT_OLM_PACKAGE={prod-stable-channel-package}
+export MIGRATION_PRODUCT_SHORT_ID={prod-migration-short-id}
+export MIGRATION_PRODUCT_DEPLOYMENT_NAME={prod-migration-deployment-name}
+export MIGRATION_PRODUCT_OPERATOR_NAME={prod-migration-operator}
+export MIGRATION_PRODUCT_CHE_CLUSTER_CR_NAME={prod-migration-checluster}
+export MIGRATION_PRODUCT_IDENTITY_PROVIDER_DEPLOYMENT_NAME={identity-provider-id}
+export MIGRATION_PRODUCT_SUBSCRIPTION_NAME={prod-migration-subscription}
 ----
 <1> Adapt to the {orch-namespace} where {prod-short} is installed.
 
