--- a/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/pages/upgrading-che-7-41-on-openshift.adoc
@@ -30,7 +30,7 @@ export PRODUCT_CHE_CLUSTER_CR_NAME={prod-checluster}
 export PRODUCT_OLM_STABLE_CHANNEL={prod-stable-channel}
 export PRODUCT_OLM_CATALOG_SOURCE={prod-stable-channel-catalog-source}
 export PRODUCT_OLM_PACKAGE={prod-stable-channel-package}
-export MIGRATION_PRODUCT_SHORT_ID={prod-migration-short-id}
+export MIGRATION_PRODUCT_SHORT_ID={prod-migration-id-short}
 export MIGRATION_PRODUCT_DEPLOYMENT_NAME={prod-migration-deployment}
 export MIGRATION_PRODUCT_OPERATOR_NAME={prod-migration-operator}
 export MIGRATION_PRODUCT_CHE_CLUSTER_CR_NAME={prod-migration-checluster}
