--- a/modules/hosted-che/partials/assembly_hosted-che.adoc
+++ b/modules/hosted-che/partials/assembly_hosted-che.adoc
@@ -23,6 +23,6 @@ include::partial$ref_hosted-che-faq-and-troubleshooting.adoc[leveloffset=+1]
 
 .Additional resources
 
-* For general end-user guidance, see xref:end-user-guide:using-developer-workspaces.adoc[].
+* For general end-user guidance, see xref:end-user-guide:user-onboarding.adoc[].
 
 :context: {parent-context-of-hosted-che}
