--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -5,13 +5,14 @@
 [id="mounting-secrets_{context}"]
 = Mounting Secrets
 
-You can automatically mount {orch-name} Secrets to all workspace containers, creating permanent mount points for components such as SSH key pairs or AWS authorization tokens.
+To mount confidential data into your workspaces, use {kubernetes} Secrets.
 
-Secrets are {orch-name} objects that store confidential data such as usernames, passwords, authentication tokens, and configurations in an encrypted form.
+Using {kubernetes} Secrets, you can mount usernames, passwords, SSH key pairs, authentication tokens (for example, AWS), and sensitive configurations.
+
+Mount {kubernetes} Secrets to the `{devworkspace}` containers in the {orch-name} cluster of your organization's {prod-short} instance.
 
 .Prerequisites
 
-* A running instance of {prod-short}.
 * You have GUI or CLI access to the {orch-name} cluster of your organization's {prod-short} instance.
 * You have created a new Secret or determined an existing one in your user {orch-namespace} to mount to all workspaces containers.
 * For CLI users: The `{orch-cli}` command line tool is installed in the operating system you are using.
@@ -45,11 +46,11 @@ Defaults to `/etc/secret/__<Secret_name>__`.
 
 Defaults to `file`.
 
-If `file`, mounts the keys and values as files within the mount path.
+`mount-as:file` mounts the keys and values as files within the mount path.
 
-If `subpath`, mounts the keys and values as files within the mount path using subpath volume mounts.
+`mount-as:subpath` mounts the keys and values within the mount path using subpath volume mounts.
 
-If `env`, mounts the keys and values as environment variables in all containers in the {devworkspace}.
+`mount-as:env` mounts the keys and values as environment variables in all `{devworkspace}` containers.
 |===
 
 .Mounting a Secret as a file
@@ -66,8 +67,8 @@ metadata:
   annotations:
     controller.devfile.io/mount-path: '/home/user/.m2'
 data:
-  settings.xml: __<Base64-encoded content>__
+  settings.xml: __<Base64_encoded_content>__
 ----
 
-When a {devworkspace} starts, the `/home/user/.m2/settings.xml` file will be available in the {devworkspace} containers.
+When you start a workspace, the `/home/user/.m2/settings.xml` file will be available in the `{devworkspace}` containers.
 ====
