--- a/modules/end-user-guide/pages/using-a-git-credentials-store.adoc
+++ b/modules/end-user-guide/pages/using-a-git-credentials-store.adoc
@@ -5,13 +5,14 @@
 [id="using-a-git-credential-store_{context}"]
 = Using a Git credentials store
 
-As an alternative to the OAuth for GitHub, GitLab, or Bitbucket that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials store as a Secret in your user {orch-namespace}.
+As an alternative to the xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth for GitHub, GitLab, or Bitbucket] that is configured by the administrator of your organization's {prod-short} instance, you can apply your Git credentials store as a {kubernetes} Secret.
 
-When mounting the Secret, a Git configuration file with the path to the mounted Git credentials store is automatically configured and mounted to the {devworkspace} containers at `/etc/gitconfig`.
+Apply the {kubernetes} Secret in your user {orch-namespace} of the {orch-name} cluster of your organization's {prod-short} instance.
+
+When you apply the Secret, a Git configuration file with the path to the mounted Git credentials store is automatically configured and mounted to the `{devworkspace}` containers in the cluster at `/etc/gitconfig`. This makes your Git credentials store available in your workspaces.
 
 .Prerequisites
 
-* A running instance of {prod-short}.
 * You have CLI or GUI access to the {orch-name} cluster of your organization's {prod-short} instance.
 * For CLI users: The `{orch-cli}` and link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
 
@@ -27,7 +28,10 @@ https://__<username>__:__<token>__@__<git_server_hostname>__
 +
 .A line in a `.git-credentials` file
 ====
-`https://trailblazer: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@github.com`
+[subs="+quotes,+attributes,+macros"]
+----
+pass:a,c,q[https://trailblazer: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@github.com]
+----
 ====
 
 . Select credentials from your `.git-credentials` file for the Secret. Encode the selected credentials to Base64 for the next step.
@@ -63,12 +67,12 @@ data:
 ----
 +
 <1> The `controller.devfile.io/git-credential` label marks the Secret as containing Git credentials.
-<2> A custom absolute path in the {devworkspace} containers. The Secret is mounted as the `credentials` file at this path. The default path is `/`.
+<2> A custom absolute path in the `{devworkspace}` containers. The Secret is mounted as the `credentials` file at this path. The default path is `/`.
 <3> The selected content from `.git-credentials` that you encoded to Base64 in the previous step.
 +
 [TIP]
 ====
-You can create and apply multiple Git credentials Secrets in your user {orch-namespace}. All of them will be copied into one Secret that will be mounted to the {devworkspace} containers. For example, if you set the mount path to `/etc/secret`, then the one Secret with all of your Git credentials will be mounted at `/etc/secret/credentials`. You must set all Git credentials Secrets in your user {orch-namespace} to the same mount path. You can set the mount path to an arbitrary path because the mount path will be automatically set in the Git configuration file configured at `/etc/gitconfig`.
+You can create and apply multiple Git credentials Secrets in your user {orch-namespace}. All of them will be copied into one Secret that will be mounted to the `{devworkspace}` containers. For example, if you set the mount path to `/etc/secret`, then the one Secret with all of your Git credentials will be mounted at `/etc/secret/credentials`. You must set all Git credentials Secrets in your user {orch-namespace} to the same mount path. You can set the mount path to an arbitrary path because the mount path will be automatically set in the Git configuration file configured at `/etc/gitconfig`.
 ====
 
 . Use the CLI or GUI to apply the Secret to the {orch-name} cluster of your organization's {prod-short} instance.
