Change command formatting
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/modules/end-user-guide/pages/mounting-configmaps.adoc
+++ b/modules/end-user-guide/pages/mounting-configmaps.adoc
@@ -27,7 +27,12 @@ Mount {kubernetes} ConfigMaps to the `{devworkspace}` containers in the {orch-na
 ====
 CLI users can run `{orch-cli}`:
 
-`$ {orch-cli} label configmap __<ConfigMap_name>__ controller.devfile.io/mount-to-devworkspace=true controller.devfile.io/watch-configmap=true`
+[subs="+quotes,+attributes,+macros"]
+----
+$ {orch-cli} label configmap __<ConfigMap_name>__ \
+        controller.devfile.io/mount-to-devworkspace=true \
+        controller.devfile.io/watch-configmap=true
+----
 ====
 
 . Optional: Use the annotations to configure how the ConfigMap is mounted.
