--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -7,7 +7,7 @@
 
 To mount confidential data into your workspaces, use {kubernetes} Secrets.
 
-Using {kubernetes} Secrets, you can mount usernames, passwords, SSH key pairs, authentication tokens (for example, AWS), and sensitive configurations.
+Using {kubernetes} Secrets, you can mount usernames, passwords, SSH key pairs, authentication tokens (for example, for AWS), and sensitive configurations.
 
 Mount {kubernetes} Secrets to the `{devworkspace}` containers in the {orch-name} cluster of your organization's {prod-short} instance.
 
@@ -27,7 +27,12 @@ Mount {kubernetes} Secrets to the `{devworkspace}` containers in the {orch-name}
 ====
 CLI users can run `{orch-cli}`: 
 
-`$ {orch-cli} label secret __<Secret_name>__ controller.devfile.io/mount-to-devworkspace=true controller.devfile.io/watch-secret=true`
+[subs="+quotes,+attributes,+macros"]
+----
+$ {orch-cli} label secret __<Secret_name>__ \
+        controller.devfile.io/mount-to-devworkspace=true \
+        controller.devfile.io/watch-secret=true
+----
 ====
 
 . Optional: Use the annotations to configure how the Secret is mounted.
