--- a/modules/administration-guide/pages/branding-che-theia.adoc
+++ b/modules/administration-guide/pages/branding-che-theia.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Branding Che-Theia
+:description: Customize the Che-Theia interface and branding
 :keywords: contributor-guide, branding-che-theia
 :page-aliases: contributor-guide:branding-che-theia
 :parent-context-of-branding-che-theia: {context}
