--- a/modules/administration-guide/pages/branding.adoc
+++ b/modules/administration-guide/pages/branding.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Branding
+:description: Branding the Che-Theia
 :keywords: administration-guide, branding
 :page-aliases: 
 
