--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -1,5 +1,6 @@
 :_content-type: REFERENCE
 :navtitle: Caching images for faster workspace start
+:description: Caching images for faster workspace start
 :keywords: administration-guide, caching-images-for-faster-workspace-start
 :page-aliases: .:caching-images-for-faster-workspace-start
 
