--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Calculating Che resource requirements
+:description: Calculating {prod-short} resource requirements
 :keywords: administration-guide, calculating-che-resource-requirements
 :page-aliases: .:calculating-che-resource-requirements
 
