--- a/modules/administration-guide/pages/che-operator.adoc
+++ b/modules/administration-guide/pages/che-operator.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: {prod-short} operator
+:description: Components of {prod-short} operator
 :keywords: administration-guide, architecture, operator
 :page-aliases: 
 
