--- a/modules/administration-guide/pages/che-server.adoc
+++ b/modules/administration-guide/pages/che-server.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: {prod-short} server
+:description: Functions of {prod-short} server
 :keywords: administration-guide, architecture, server, devworkspace
 :page-aliases: 
 
