--- a/modules/administration-guide/pages/che-theia-workspaces.adoc
+++ b/modules/administration-guide/pages/che-theia-workspaces.adoc
@@ -2,6 +2,7 @@
 // = Che-Theia workspaces
 :_content-type: CONCEPT
 :navtitle: Che-Theia workspaces
+:description: Telemetry overview
 :keywords: che-theia, workspaces
 :page-aliases: extensions:che-theia-workspaces
 
