--- a/modules/administration-guide/pages/collecting-logs-using-chectl.adoc
+++ b/modules/administration-guide/pages/collecting-logs-using-chectl.adoc
@@ -1,5 +1,6 @@
 :_content-type: REFERENCE
 :navtitle: Collecting logs using {prod-cli}
+:description: Collecting logs using {prod-cli}
 :keywords: administration-guide, collecting-logs-using-chectl
 :page-aliases: .:collecting-logs-using-chectl
 
