--- a/modules/administration-guide/pages/configuring-che-hostname.adoc
+++ b/modules/administration-guide/pages/configuring-che-hostname.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Configuring {prod-short} hostname
+:description: Configuring {prod-short} to use custom hostname
 :keywords: administration guide, configuring, {prod}, {prod-short}, hostname
 :page-aliases: installation-guide:configuring-che-hostname
 
