--- a/modules/administration-guide/pages/configuring-ingresses.adoc
+++ b/modules/administration-guide/pages/configuring-ingresses.adoc
@@ -1,5 +1,6 @@
 :_content-type: PROCEDURE
 :navtitle: Configuring {orch-ingress}
+:description: Configuring labels and annotations on each {orch-ingress}
 :keywords: administration guide, configuring, ingress, ingresses
 :page-aliases: installation-guide:configuring-ingresses
 
