--- a/modules/administration-guide/pages/configuring-namespace-strategies.adoc
+++ b/modules/administration-guide/pages/configuring-namespace-strategies.adoc
@@ -1,5 +1,6 @@
 :_content-type: CONCEPT
 :navtitle: Configuring workspace target {orch-namespace}
+:description: Configuring workspace target {orch-namespace}
 :keywords: administration guide, configuring, namespace
 :page-aliases: installation-guide:configuring-namespace-strategies
 
