--- a/modules/administration-guide/pages/checluster-custom-resource-fields-reference.adoc
+++ b/modules/administration-guide/pages/checluster-custom-resource-fields-reference.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: `CheCluster` Custom Resource fields reference
+:description: `CheCluster` Custom Resource fields reference
 :keywords: administration guide, checluster, custom resource
 :page-aliases: installation-guide:checluster-custom-resource-fields-reference 
 
