--- a/modules/administration-guide/pages/configuring-che-to-run-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/configuring-che-to-run-in-a-restricted-environment.adoc
@@ -1,5 +1,6 @@
 :_content-type: ASSEMBLY
 :navtitle: Configuring {prod-short} to run in a restricted environment
+:description: Configuring {prod-short} to run in a restricted environment
 :keywords: administration guide, configuring, restricted environment
 :page-aliases: 
 :parent-context-of-installing-che-in-a-restricted-environment: {context}
