--- a/modules/administration-guide/examples/ref_che-supported-platforms-and-installation-methods.adoc
+++ b/modules/administration-guide/examples/ref_che-supported-platforms-and-installation-methods.adoc
@@ -22,7 +22,8 @@ WARNING: Setting up link:https://kubernetes.io/docs/reference/access-authn-authz
 The following options are available for the local installation:
 
 * link:https://minikube.sigs.k8s.io/docs/[minikube]
-* link:https://developers.redhat.com/products/codeready-containers/overview[CodeReady Containers]
+* link:https://developers.redhat.com/products/openshift-local/overview[Red Hat OpenShift Local
+(formerly Red Hat CodeReady Containers)]
 
 .Additional resources
 
