--- a/modules/overview/partials/assembly_introduction-to-eclipse-che.adoc
+++ b/modules/overview/partials/assembly_introduction-to-eclipse-che.adoc
@@ -10,7 +10,7 @@
 * A centralized developer environment running on {platforms-name}.
 * A multi-container workspace for each developer with the ability to replicate with a single click using {prod} factories.
 * Pre-built stacks with the ability to create custom stacks for any language or runtime.
-* An enterprise integration using {identity-provider} for Active Directory (AD) database and Lightweight Directory Access Protocol (LDAP) related actions.
+* An enterprise integration using OpenShift OAuth or Dex.
 * Browser-based IDEs; integration with Che-Theia or any other web IDE, such as Jupyter.
 * Support of tools protocols, such as the Language Server Protocol or Debug Adapter Protocol.
 * A plug-in mechanism compatible with Visual Studio Code extensions.
