docs: update PostgreSQL info to use relevant images
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/modules/administration-guide/examples/snip_che-postgresql-additional-resources.adoc
+++ b/modules/administration-guide/examples/snip_che-postgresql-additional-resources.adoc
@@ -1,2 +1,2 @@
-* link:https://quay.io/repository/eclipse/che-postgres?tab=history[`quay.io/eclipse/che-postgres` container image]
-* link:https://github.com/eclipse-che/che-server/tree/main/dockerfiles/postgres[{prod-short} Postgres repository]
+* link:https://quay.io/repository/eclipse/che--centos--postgresql-96-centos7?tab=history[`quay.io/eclipse/che--centos--postgresql-96-centos7` container image]
+* link:https://quay.io/repository/eclipse/che--centos--postgresql-13-centos7?tab=history[`quay.io/eclipse/che--centos--postgresql-13-centos7` container image]
