docs: mounting volumes, secrets and configmaps for devworkspaces (#2296)
* docs: mounting volumes, secrets and configmaps for devworkspaces

Signed-off-by: David Kwon <dakwon@redhat.com>
Co-authored-by: Max Leonov <mleonov@redhat.com>
Co-authored-by: Fabrice Flore-Thébault <ffloreth@redhat.com>

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -10,11 +10,12 @@
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 * xref:selecting-an-ide.adoc[]
 * xref:customizing-workspaces-components.adoc[]
-* xref:configuring-user-preferences-and-secrets.adoc[]
-** xref:configuring-user-secrets.adoc[]
-** xref:secret-as-a-file.adoc[]
-** xref:secret-as-a-variable.adoc[]
-** xref:git-credential-store.adoc[]
+* xref:using-credentials-and-configurations-in-workspaces.adoc[]
+** xref:using-a-git-credentials-store.adoc[]
+** xref:creating-image-pull-secrets.adoc[]
+** xref:mounting-secrets.adoc[]
+** xref:mounting-configmaps.adoc[]
+* xref:requesting-persistent-storage-for-workspaces.adoc[] 
 * xref:integrating-with-kubernetes.adoc[]
 ** xref:automatic-token-injection.adoc[]
 ** xref:navigating-che-from-openshift-developer-perspective.adoc[]
